# mem-globe

./: README.md
src/: pyproject.toml
src/album_app/: main.py
src/album_app/database/: crud.py  database.py  models.py  schemas.py  sql_album_app.db
src/album_app/routers/: photos.py
src/album_app/ui/: ui.py
src/album_app/ui/auth/: authenticate.py  config.yaml
