[tool.poetry]
name = "album-app"
version = "0.1.0"
description = ""
authors = ["Akbeeh <Akbeeeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
pydantic = "1.10.14"
uvicorn = "^0.28.0"
streamlit = "^1.32.0"
folium = "^0.16.0"
pytest = "^8.1.1"
streamlit-folium = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
